calculations of differnet distances

--- a/01_06b.ipynb
+++ b/01_06b.ipynb
@@ -99,6 +99,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "1e7308ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#my method\n",
+    "\n",
+    "manhattan_distance = np.abs(np.array(colour1) - np.array(colour2)).sum()\n",
+    "print(manhattan_distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "a383372b",
    "metadata": {},
@@ -111,10 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8ef5c163",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(120.0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#An alternate approach\n",
     "\n",
@@ -130,6 +162,32 @@
    "metadata": {},
    "source": [
     "### Euclidian distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "03fb3710",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(78.74007874011811)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#my code\n",
+    "abs_array = np.abs(a-b)\n",
+    "sumofsq = 0\n",
+    "for i in range(3):\n",
+    "    sumofsq += abs_array[i]**2\n",
+    "np.sqrt(sumofsq)"
    ]
   },
   {
@@ -164,12 +222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7795a790",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8271930531781648\n"
+     ]
+    }
+   ],
    "source": [
-    "cosine = # ADD CODE HERE\n",
+    "cosine = np.dot(a,b)/ (np.linalg.norm(a)*np.linalg.norm(b))\n",
+    "\n",
     "\n",
     "print(cosine)"
    ]
@@ -184,12 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "cd713f93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13800\n"
+     ]
+    }
+   ],
    "source": [
-    "dot = # ADD CODE HERE\n",
+    "dot = np.dot(a,b)\n",
     "\n",
     "print(dot)"
    ]
